# glad-fortran

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
examples/: gl_glfw.F90
glad_fortran/generator/fortran/: __init__.py
glad_fortran/generator/fortran/templates/: base_template.F90  base_template.f90  types.h
glad_fortran/generator/fortran/templates/types/: gl.h
